# pptx2web

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json
packaging/: build.ps1  installer.iss  make-themes-manifest.ps1  pptx2web.spec  run_gui.py
player/: index.template.html  player.css  player.js
src/pptx2web/: __init__.py  cli.py  config.py  images.py  media.py  metadata.py  models.py  packager.py  pipeline.py  renderer.py  updater.py  validate.py
src/pptx2web/gui/: __init__.py  app.py
src/pptx2web/gui/assets/: app.css  app.js  index.html
tests/: conftest.py  test_config.py  test_gui_separation.py  test_images.py  test_metadata.py  test_packager.py  test_pipeline.py  test_validate.py
tests/fixtures/: demo.config.json  demo.pptx
themes/: certmind.json  default.json
